force-app/main/default/objects/Navigation__c/Navigation__c.object-meta.xml
<CustomObject>
    <label>Navigation</label>
    <nameField>
        <label>Navigation Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>