force-app/main/default/objects/Navigation__c/fields/Activities_Button_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Activities_Button_API_Name__c</fullName>
    <label>Activities Button API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>