force-app/main/default/objects/Navigation__c/fields/Icon_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Icon_Background_Color__c</fullName>
    <label>Icon Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>