force-app/main/default/objects/Navigation__c/fields/List_View_Object__c.field-meta.xml
<CustomField>
    <fullName>List_View_Object__c</fullName>
    <label>List View Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>