force-app/main/default/objects/Navigation__c/fields/Navigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Type__c</fullName>
    <label>Navigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Interactions</fullName>
            </value>
            <value>
                <fullName>Bulk Actions</fullName>
            </value>
            <value>
                <fullName>Create New</fullName>
            </value>
            <value>
                <fullName>New Interaction</fullName>
                <isActive>false</isActive>
                <label>New Interaction</label>
            </value>
            <value>
                <fullName>New Interactive</fullName>
                <isActive>false</isActive>
                <label>New Interactive</label>
            </value>
            <value>
                <fullName>New Relationship</fullName>
                <isActive>false</isActive>
                <label>New Relationship</label>
            </value>
            <value>
                <fullName>Quick Action</fullName>
                <isActive>false</isActive>
                <label>Quick Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>