force-app/main/default/objects/Navigation__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Navigation__c</referenceTo>
    <relationshipLabel>Navigation</relationshipLabel>
    <relationshipName>Parent</relationshipName>
    <type>Lookup</type>
</CustomField>