force-app/main/default/objects/Navigation__c/fields/Quick_Create_Object__c.field-meta.xml
<CustomField>
    <fullName>Quick_Create_Object__c</fullName>
    <label>Action Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>