force-app/main/default/objects/Navigation__c/fields/Quick_Create_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Quick_Create_Record_Type__c</fullName>
    <label>Action Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>