force-app/main/default/objects/Navigation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Navigation_Type__c</columns>
    <columns>Icon__c</columns>
    <columns>Icon_Background_Color__c</columns>
    <columns>Order__c</columns>
    <columns>Parent__c</columns>
    <columns>URL__c</columns>
    <columns>List_View_Object__c</columns>
    <columns>List_View_Name__c</columns>
    <columns>Quick_Create_Object__c</columns>
    <columns>Quick_Create_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>