force-app/main/default/objects/Navigation__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>Order__c</columns>
    <columns>Activities_Button_API_Name__c</columns>
    <columns>Quick_Create_Object__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>