force-app/main/default/objects/Navigation__c/listViews/By_Jaspreet.listView-meta.xml
<ListView>
    <fullName>By_Jaspreet</fullName>
    <columns>NAME</columns>
    <columns>List_View_Name__c</columns>
    <columns>Order__c</columns>
    <columns>List_View_Object__c</columns>
    <columns>Parent__c</columns>
    <columns>Quick_Create_Object__c</columns>
    <columns>Quick_Create_Record_Type__c</columns>
    <columns>URL__c</columns>
    <filterScope>Mine</filterScope>
    <label>By Jaspreet</label>
</ListView>